<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/svNull_state"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:paddingTop="?attr/actionBarSize">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivArts"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:onClick="onCategoryClick"
            android:layout_marginTop="@dimen/null_state_margin"
            android:scaleType="centerCrop"
            android:src="@drawable/arts_home" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignBottom="@id/ivArts"
            android:background="@color/titleOverlay"
            android:gravity="end"
            android:text="@string/null_state_arts"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivSports"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:onClick="onCategoryClick"
            android:layout_below="@id/ivArts"
            android:layout_marginTop="@dimen/null_state_margin"
            android:scaleType="centerCrop"
            android:src="@drawable/sports_home" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignBottom="@id/ivSports"
            android:background="@color/titleOverlay"
            android:gravity="end"
            android:text="@string/null_state_sports"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivScience"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/ivSports"
            android:onClick="onCategoryClick"
            android:layout_marginTop="@dimen/null_state_margin"
            android:scaleType="centerCrop"
            android:src="@drawable/science_home"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignBottom="@id/ivScience"
            android:background="@color/titleOverlay"
            android:gravity="end"
            android:text="@string/null_state_science"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivTechnology"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/ivScience"
            android:onClick="onCategoryClick"
            android:layout_marginTop="@dimen/null_state_margin"
            android:scaleType="centerCrop"
            android:src="@drawable/technology_home" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignBottom="@id/ivTechnology"
            android:background="@color/titleOverlay"
            android:gravity="end"
            android:text="@string/null_state_tech"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivWorld"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/ivTechnology"
            android:onClick="onCategoryClick"
            android:layout_marginTop="@dimen/null_state_margin"
            android:scaleType="centerCrop"
            android:src="@drawable/world_png" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignBottom="@id/ivWorld"
            android:background="@color/titleOverlay"
            android:gravity="end"
            android:text="@string/null_state_world"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </RelativeLayout>
</ScrollView>
